src/test/ui/parser/raw/raw-str.stderr
error: unterminated raw string
  --> $DIR/raw-str.rs:2:13
   |
LL |     let x = r##"lol"#;
   |             ^^^ unterminated raw string
help: you might have meant to end the raw string here
   |
LL |     let x = r##"lol'##;
   |                    ^^^

error: aborting due to previous error

